--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@ href="gamedev/index.html">ゲーム制作関連</a> | <a
 href="diary/2022-10-24.html">日記超</a> | <a
 href="memo/DIK.html">メモ超</a></p>
 <h2 id="更新情報">更新情報</h2>
+<p><a href="tools/uecpptool.html">2023-03-04 「UECPPTool
+rev.60」に更新</a></p>
 <p><a href="tools/FolderManager.html">2023-02-11 「FolderManager
 rev.16」に更新</a></p>
 <p><a href="tools/FolderManager.html">2023-02-04 「FolderManager
