--- a/tools/uecpptool.html
+++ b/tools/uecpptool.html
@@ -66,6 +66,7 @@
 <li><p>PathColorを設定する機能</p>
 <ul>
 <li><code>Materials</code>とか指定すれば<code>Materials</code>という名前のフォルダは全てカラーが設定される</li>
+<li>プロジェクト毎に設定を保存したり読み込む機能</li>
 </ul></li>
 <li><p>不要ファイルを削除する機能</p>
 <ul>
@@ -73,19 +74,29 @@
 </ul></li>
 </ul>
 <h2 id="変更履歴">変更履歴</h2>
-<h3 id="rev.49---2022-10-10">[Rev.49] - 2022-10-10</h3>
+<h3 id="rev.60---2023-03-04">[Rev.60] - 2023-03-04</h3>
 <h4 id="added">Added</h4>
+<ul>
+<li>プロジェクト毎にフォルダの色設定を保存したり読み込む機能を追加</li>
+</ul>
+<h4 id="changed">Changed</h4>
+<ul>
+<li>プロジェクトの構成を複数の<code>qmake</code>に分割</li>
+<li><code>Qtlib</code>更新による諸々の変更の対応等</li>
+</ul>
+<h3 id="rev.49---2022-10-10">[Rev.49] - 2022-10-10</h3>
+<h4 id="added-1">Added</h4>
 <ul>
 <li><code>UFUNCTION</code>,<code>UPROPERTY</code>の編集機能の実装(表示されているものは一通り)</li>
 <li><code>ExpandEnumAsExecs</code>と<code>BlueprintPure</code>が同時チェックされていた場合、確認するように実装</li>
 <li>build.csの<code>CppStandardVersion</code>オプションを変更する機能を実装</li>
 </ul>
-<h4 id="changed">Changed</h4>
+<h4 id="changed-1">Changed</h4>
 <ul>
 <li><code>ModuleRules</code>のUIを<code>TreeWidget</code>ベースに変更した</li>
 </ul>
 <h3 id="rev.45---2022-10-07">[Rev.45] - 2022-10-07</h3>
-<h4 id="added-1">Added</h4>
+<h4 id="added-2">Added</h4>
 <ul>
 <li><code>UFUNCTION</code>,<code>UPROPERTY</code>の編集機能(一部のみ実装)
 <ul>
@@ -101,7 +112,7 @@ style="color: red"><strong>上書きで消えます</strong></span></li>
 </ul></li>
 <li>ツール&gt;ActiveClassRedirectsの削除ボタンの機能を実装</li>
 </ul>
-<h4 id="changed-1">Changed</h4>
+<h4 id="changed-2">Changed</h4>
 <ul>
 <li>テンプレートファイルの並びを自然にした</li>
 <li>行数を表示してみた</li>
@@ -115,10 +126,7 @@ style="color: red"><strong>上書きで消えます</strong></span></li>
 <h3 id="rev.35---2022-09-22">[Rev.35] - 2022-09-22</h3>
 <h2 id="ダウンロード">ダウンロード</h2>
 <p>新しいバージョンにする場合、exeファイルの更新でOKです。</p>
-<p><a
-href="../arcive/UECPPTool-x64-rev49.7z">UECPPTool-x64-rev49.7z</a></p>
-<p><a
-href="../arcive/UECPPTool-x64-rev45.7z">UECPPTool-x64-rev45.7z</a></p>
+<p><a href="../arcive/UECPPTool_rev60.7z">UECPPTool_rev60.7z</a></p>
 <hr />
 <p><a href="index.html">戻る</a></p>
 
