--- a/tools/nkf-gui.html
+++ b/tools/nkf-gui.html
@@ -32,6 +32,7 @@
 <ul>
 <li><a href="#機能">機能</a></li>
 <li><a href="#現状の問題点">現状の問題点</a></li>
+<li><a href="#変更履歴">変更履歴</a></li>
 <li><a href="#ダウンロード">ダウンロード</a></li>
 <li><a href="#リポジトリ">リポジトリ</a></li>
 </ul>
@@ -53,8 +54,33 @@
 <li>数万ファイル放り込むと延々と処理し続ける</li>
 </ul></li>
 </ul>
+<h2 id="変更履歴">変更履歴</h2>
+<h3 id="rev.14---2023-07-02">[rev.14] - 2023-07-02</h3>
+<ul>
+<li>ログファイルの出力を止めた</li>
+</ul>
+<h3 id="rev.12---2023-07-02">[rev.12] - 2023-07-02</h3>
+<ul>
+<li>検索結果後に除外フィルター処理をしていたのをアイテム登録時に適用するようにした</li>
+<li>検索中のステータスバーにフォルダ名を表示するように変更</li>
+</ul>
+<h3 id="rev.11---2023-01-24">[rev.11] - 2023-01-24</h3>
+<h4 id="added">Added</h4>
+<ul>
+<li>ASCII判定のファイルを変換対象から除外するオプションを追加</li>
+<li>ファイルリストアップ時のステータスメッセージを追加</li>
+</ul>
+<h4 id="changed">Changed</h4>
+<ul>
+<li>フレームレスウィンドウを止めた</li>
+<li>QtAwesomeを外した</li>
+</ul>
+<h3 id="rev.7---2022-10-22">[rev.7] - 2022-10-22</h3>
+<ul>
+<li>initial commit</li>
+</ul>
 <h2 id="ダウンロード">ダウンロード</h2>
-<p><a href="../arcive/nkf-gui-rev6.7z">nkf-gui-rev6.7z</a></p>
+<p><a href="../arcive/nkf-gui_rev14.7z">nkf-gui_rev14.7z</a></p>
 <h2 id="リポジトリ">リポジトリ</h2>
 <p><a
 href="https://github.com/hananoki/nkf-gui">https://github.com/hananoki/nkf-gui</a></p>
