--- a/memo/MediaInfo Inform.html
+++ b/memo/MediaInfo Inform.html
@@ -14,6 +14,7 @@
 <article>
 <div class="side">
 <p><a href="DIK.html">DIK</a></p>
+<p><a href="GreeceNumbers.html">ギリシャ数字</a></p>
 <p><a href="MediaInfo Inform.html">MediaInfo Inform</a></p>
 </div> 
 <div class="content">
