--- a/tools/uecpptool.html
+++ b/tools/uecpptool.html
@@ -74,6 +74,11 @@
 </ul></li>
 </ul>
 <h2 id="変更履歴">変更履歴</h2>
+<h3 id="rev.61---2023-03-20">[Rev.61] - 2023-03-20</h3>
+<h4 id="fixed">Fixed</h4>
+<ul>
+<li><code>Build.cs</code>の<code>CppStandardVersion</code>の変更が機能していなかったのを修正</li>
+</ul>
 <h3 id="rev.60---2023-03-04">[Rev.60] - 2023-03-04</h3>
 <h4 id="added">Added</h4>
 <ul>
@@ -118,7 +123,7 @@ style="color: red"><strong>上書きで消えます</strong></span></li>
 <li>行数を表示してみた</li>
 <li>検索のコンテキストメニューを追加（未実装）</li>
 </ul>
-<h4 id="fixed">Fixed</h4>
+<h4 id="fixed-1">Fixed</h4>
 <ul>
 <li>Pluginsの×ボタンの位置を修正</li>
 </ul>
