--- a/tools/nkf-gui.html
+++ b/tools/nkf-gui.html
@@ -48,13 +48,19 @@
 </ul>
 <h2 id="現状の問題点">現状の問題点</h2>
 <ul>
-<li><code>utf8</code>しか対応してない</li>
+<li><del><code>utf8</code>しか対応してない</del></li>
 <li>マルチスレッド処理を途中で中断出来てない
 <ul>
 <li>数万ファイル放り込むと延々と処理し続ける</li>
 </ul></li>
 </ul>
 <h2 id="変更履歴">変更履歴</h2>
+<h3 id="rev.15---2023-08-05">[rev.15] - 2023-08-05</h3>
+<ul>
+<li>他の文字コードに対応(SJIS,EUC,UTF16LE,UTF16BE)</li>
+<li>改行コードの変換に対応</li>
+<li>UnicodeのBOMの有無に対応</li>
+</ul>
 <h3 id="rev.14---2023-07-02">[rev.14] - 2023-07-02</h3>
 <ul>
 <li>ログファイルの出力を止めた</li>
@@ -80,7 +86,7 @@
 <li>initial commit</li>
 </ul>
 <h2 id="ダウンロード">ダウンロード</h2>
-<p><a href="../arcive/nkf-gui_rev14.7z">nkf-gui_rev14.7z</a></p>
+<p><a href="../arcive/nkf-gui_rev15.7z">nkf-gui_rev15.7z</a></p>
 <h2 id="リポジトリ">リポジトリ</h2>
 <p><a
 href="https://github.com/hananoki/nkf-gui">https://github.com/hananoki/nkf-gui</a></p>
